[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform-agnostic Rust driver for the DHT11 temperature and humidity sensor."
edition = "2018"
keywords = ["embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "dht11"
readme = "README.md"
repository = "https://github.com/plorefice/dht11-rs"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }

[dev-dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

[dev-dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f407"]

[profile.release]
lto = true